# drop-sentinel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  monitor.yml
config/: auto.example.yml  config.example.yml  watchlist.example.yml
data/history/: popmart_2026-04-20.jsonl  popmart_2026-04-21.jsonl  popmart_2026-04-22.jsonl  popmart_2026-04-23.jsonl  popmart_2026-04-24.jsonl  popmart_2026-04-25.jsonl  popmart_2026-04-26.jsonl  popmart_2026-04-27.jsonl  popmart_2026-04-28.jsonl  popmart_2026-04-29.jsonl  popmart_2026-04-30.jsonl  popmart_2026-05-01.jsonl  popmart_2026-05-02.jsonl  popmart_2026-05-03.jsonl  popmart_2026-05-04.jsonl  popmart_2026-05-05.jsonl  popmart_2026-05-06.jsonl  popmart_2026-05-07.jsonl  popmart_2026-05-08.jsonl  popmart_2026-05-09.jsonl  popmart_2026-05-10.jsonl  popmart_2026-05-12.jsonl  popmart_2026-05-13.jsonl  popmart_2026-05-14.jsonl  popmart_2026-05-15.jsonl  popmart_2026-05-16.jsonl  popmart_2026-05-17.jsonl  popmart_2026-05-18.jsonl  popmart_2026-05-19.jsonl  popmart_2026-05-20.jsonl  popmart_2026-05-21.jsonl  popmart_2026-05-22.jsonl  popmart_2026-05-23.jsonl  popmart_2026-05-24.jsonl  popmart_2026-05-25.jsonl  popmart_2026-05-26.jsonl  popmart_2026-05-27.jsonl  popmart_2026-05-28.jsonl  popmart_2026-05-29.jsonl  popmart_2026-05-30.jsonl  (+52 more)
docs/: index.html
tests/: test_calendar.py  test_config.py  test_damai_scraper.py  test_deeplink.py  test_diff.py  test_lazada_scraper.py  test_models.py  test_price_compare.py  test_shopee_scraper.py  test_shopify_scraper.py  test_social_scraper.py  test_store.py
(+35 files in other folders)
